fix pseudo action buttons on window snippets on mobile

--- a/_sass/_post-mixins.scss
+++ b/_sass/_post-mixins.scss
@@ -170,6 +170,10 @@
       width: 100%;
       background-color: $color-console-header-bg;
       color: #cccccc;
+
+      @include media($phone) {
+        font-size: 50px;
+      }
     }
   }
 
